fix(governance): close silent bypasses, crashes, and mirror drift
An audit of the harness turned up defects in five shapes. The first two
are the ones that matter, because in both the build still reads green.

Checks a project could quiet without the report saying so. A deleted
.gitleaks.toml returned a clean answer from assets-check, and nothing
else refused it on that path, the file being seeded rather than pinned.
jacoco.reportFile was not reserved, so aiming it at nothing left every
coverage exclusion unexamined. Protected plugin configuration was read
at plugin level only, so a default-test execution could carry skip and
turn the suite off. An execution a project adds under a name of its own
is still accepted, since it binds work beside the inherited run.

Checks that ended with no verdict at all. Two collectors refused a
duplicate key: one over the airness.typography.excludes list, where
naming a prefix twice is an ordinary typo, and one over a property
block that names a property twice, which Maven accepts. Three goals
gated on a source directory existing rather than on it holding Java,
then refused the empty scope, which reaches Maven as an internal plugin
error and passes the enforcement switch by. The gate is now
hasModuleJava, reading the main and test roots together, because those
goals scan both and asking only about production Java would stop a
test-only module being read.

Reports that said less than they knew. The publication-metadata goal
computed the parent snapshot finding and then dropped it whenever the
project was a snapshot too, so a releaser met the same refusal twice.
The assets-sync goal answered a different ownership question from every
other repository-wide goal and exited without a word when it declined.
PublicationContentCheck decoded archive entries and plain files with
different charsets, leaving a root path that carries any character
outside ASCII unmatchable in the POM.

Prose that disagreed with the code. The user guide offered
air